security, not finished yet

--- a/reddit.be/src/main/resources/application.properties
+++ b/reddit.be/src/main/resources/application.properties
@@ -7,3 +7,8 @@ logging.level.org.hibernate.SQL= debug
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret = my-32-character-ultra-secure-and-ultra-long-secret
+jwt.expiration = 3600
+
+spring.main.allow-circular-references= true
